cambios en las lecturas
se realizan cambios en las lecturas y se añade las lecturas que estaban pendientes.

--- a/Lecturas2.html
+++ b/Lecturas2.html
@@ -1,24 +1,23 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DOCUMENTACI[ON EN PROYECTOS DE SOFTWARE</title>
+  <title>LECTURAS2</title>
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
- <link rel="stylesheet" href="css/animate.css">
- <link rel="stylesheet" href="css/font-awesome.min.css">
- <link rel="stylesheet" href="css/jquery.bxslider.css">
- <link rel="stylesheet" type="text/css" href="css/normalize.css" />
- <link rel="stylesheet" type="text/css" href="css/demo.css" />
- <link rel="stylesheet" type="text/css" href="css/set1.css" />
- <link href="css/overwrite.css" rel="stylesheet">
- <link href="css/style.css" rel="stylesheet">
- <link rel="stylesheet" type="text/css" href="css/actividades.css">
- <link rel="stylesheet" type="text/css" href="css/lecturas.css">
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/jquery.bxslider.css">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+  <link rel="stylesheet" type="text/css" href="css/demo.css" />
+  <link rel="stylesheet" type="text/css" href="css/set1.css" />
+  <link href="css/overwrite.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/actividades.css">
+  <link rel="stylesheet" type="text/css" href="css/lecturas.css">
 </head>
 
 <body>
@@ -38,7 +37,7 @@
         <div class="menu">
           <ul class="nav nav-tabs" role="tablist">
             <li role="presentation"><a href="index.html">Inicio</a></li>
-                <li role="presentation" class="Lecturas"><a href="Lecturas.html">Lecturas</a>
+               <li role="presentation" class="Lecturas"><a href="Lecturas.html">Lecturas</a>
                 <ul class="submenu">
                    <li><a href="Lecturas2.html"><b></b>PORQUÉ Y PARA QUÉ</a></li> 
                    <li><a href="Lecturas3.html">DOCUMENTACIÓN DE PRUEBA DE SOFTWARE2</a></li>
@@ -58,31 +57,41 @@
                 <li><a href="Actividad2.html">Actividad 2</a></li>
                 <li><a href="Actividad3.html">Actividad 3</a></li>
               </ul>
-            </li>
+
             <li role="presentation" class="active"><a href="Autores.html">Autores</a></li>
           </ul>
         </div>
       </div>
     </div>
   </nav>
-<div class="container">
-    <div class="row">
-      <div id="pane" >
-          <img class="center-block" src="img/documentacion.jpg">
-        <CENTER>
-        <br><br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/pII2WpxJQg4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        <br>Alcenit Corporation [Alcenit Corporation]. (2015, Mayo 14). Pruebas de Software (Testing de Software)  [Archivo de video]. <br>Recuperado de https://www.youtube.com/watch?v=pII2WpxJQg4
-        <br><br><br><br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/qkeD94Kj_UQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        <br>DesarrolloWeb.com [DesarrolloWeb.com]. (2017, Mayo 25). Desarrollo de pruebas del software [Archivo de video]. <br>Recuperado de https://www.youtube.com/watch?v=qkeD94Kj_UQ
-        <br><br><br><br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Gh1x1kMQ5K4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        <br>Palma, A. [Andy Castillo Palma]. (2017, Agosto 17). Documentación XP - Plan de pruebas [Archivo de video]. <br>Recuperado de https://www.youtube.com/watch?v=Gh1x1kMQ5K4
-        </CENTER>
-    </div>
+<br>
+	<div class="background">
+  		<div class="body">
+    <div class="subtitle">
+      <h2 align="center"><b>¿Porque?</b></h2>
+      </div>
+    <br>
+    <br>
+    <section>
+       <p align="left">En la vida todo debe de ser organizado para que el funcionamiento y el diseño de un objeto sea lo más limpio y trasparente posible por ese motivo el desarrollo de software no es la excepción.</p>
+       <div class="img">
+          <img aling="center" src="img/porque.jpg" height="200px">
+        </div>
+        <div>
+          <p>Yes en Inglés . (16 de 01 de 2014). ingenierogeek. Obtenido de https://www.ingenierogeek.com/2014/01/por-que-en-ingles-se-usa-un-signo-de-interrogacion-y-en-espanol-se-usan-dos.html</p>
+          <br>
+    </section>
+  <div class="subtitle">
+    <h2 align="center"><b>¿Para qué?</b></h2>
   </div>
- </div>
+      <section>
+        <p align="left">Cada día necesitamos solucionar y comprender situaciones más complejas por ende necesitamos software de mejor calidad por ese motivo un software constantemente se le está realizando actualizaciones para que pueda cumplir con todos los parámetros que exigen las normas y los usuarios a cabalidad.</p>
+        <br>
+      <br>
+      </section>
+  </div>
+  </div>
+
 
 <!--pie de página-->
   <footer>
