--- a/Lecturas3.html
+++ b/Lecturas3.html
@@ -1,24 +1,23 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DOCUMENTACI[ON EN PROYECTOS DE SOFTWARE</title>
+  <title>LECTURAS3</title>
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
- <link rel="stylesheet" href="css/animate.css">
- <link rel="stylesheet" href="css/font-awesome.min.css">
- <link rel="stylesheet" href="css/jquery.bxslider.css">
- <link rel="stylesheet" type="text/css" href="css/normalize.css" />
- <link rel="stylesheet" type="text/css" href="css/demo.css" />
- <link rel="stylesheet" type="text/css" href="css/set1.css" />
- <link href="css/overwrite.css" rel="stylesheet">
- <link href="css/style.css" rel="stylesheet">
- <link rel="stylesheet" type="text/css" href="css/actividades.css">
- <link rel="stylesheet" type="text/css" href="css/lecturas.css">
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/jquery.bxslider.css">
+  <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+  <link rel="stylesheet" type="text/css" href="css/demo.css" />
+  <link rel="stylesheet" type="text/css" href="css/set1.css" />
+  <link href="css/overwrite.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/actividades.css">
+  <link rel="stylesheet" type="text/css" href="css/lecturas.css">
 </head>
 
 <body>
@@ -38,7 +37,7 @@
         <div class="menu">
           <ul class="nav nav-tabs" role="tablist">
             <li role="presentation"><a href="index.html">Inicio</a></li>
-                <li role="presentation" class="Lecturas"><a href="Lecturas.html">Lecturas</a>
+               <li role="presentation" class="Lecturas"><a href="Lecturas.html">Lecturas</a>
                 <ul class="submenu">
                    <li><a href="Lecturas2.html"><b></b>PORQUÉ Y PARA QUÉ</a></li> 
                    <li><a href="Lecturas3.html">DOCUMENTACIÓN DE PRUEBA DE SOFTWARE2</a></li>
@@ -58,31 +57,40 @@
                 <li><a href="Actividad2.html">Actividad 2</a></li>
                 <li><a href="Actividad3.html">Actividad 3</a></li>
               </ul>
-            </li>
+
             <li role="presentation" class="active"><a href="Autores.html">Autores</a></li>
           </ul>
         </div>
       </div>
     </div>
   </nav>
-<div class="container">
-    <div class="row">
-      <div id="pane" >
-          <img class="center-block" src="img/documentacion.jpg">
-        <CENTER>
-        <br><br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/pII2WpxJQg4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        <br>Alcenit Corporation [Alcenit Corporation]. (2015, Mayo 14). Pruebas de Software (Testing de Software)  [Archivo de video]. <br>Recuperado de https://www.youtube.com/watch?v=pII2WpxJQg4
-        <br><br><br><br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/qkeD94Kj_UQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        <br>DesarrolloWeb.com [DesarrolloWeb.com]. (2017, Mayo 25). Desarrollo de pruebas del software [Archivo de video]. <br>Recuperado de https://www.youtube.com/watch?v=qkeD94Kj_UQ
-        <br><br><br><br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Gh1x1kMQ5K4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-        <br>Palma, A. [Andy Castillo Palma]. (2017, Agosto 17). Documentación XP - Plan de pruebas [Archivo de video]. <br>Recuperado de https://www.youtube.com/watch?v=Gh1x1kMQ5K4
-        </CENTER>
-    </div>
+<br>
+	<div class="background">
+  		<div class="body">
+    <div class="subtitle">
+      <h2 align="center"><b>Documentacion De Pruebas De Software</b></h2>
+      </div>
+    <br>
+    <br>
+    <section>
+      <p align="left">Siendo los softwares una herramienta que se utilizan en prácticamente en todo el mundo y funciona con todos los dispositivos se debe de garantizar el buen funcionamiento de este y que sea un software de calidad para el buen consumo.
+      Durante este proceso los desarrolladores suelen olvidar de un paso muy importante que es la documentación, ¿esto para qué? Por los siguientes motivos.
+      Para un mantenimiento efectivo por parte de sus desarrolladores o personal ajeno a este.
+      para que el usuario tenga un buen manejo y saque provecho de este, hay muchos usuarios que no entiende en su totalidad un software y mucho menos lo manejan, pero es por falta de información.
+      Para verificar antes de instalar los requisitos del software y así evitar un mal funcionamiento del equipo o del software.
+    </p>
+      <div class="img">
+        <img align="center" src="img/Prueba_de_software.jpg" height="200px">
+      </div>
+      <br>
+      <div>
+        <p> wordpress. (07 de 08 de 2010). Obtenido de https://dy05.wordpress.com/</p>
+        </div>
+        <br>
+      </section>      
   </div>
- </div>
+  </div>
+
 
 <!--pie de página-->
   <footer>
