se quita opción de negrilla

--- a/Lecturas.html
+++ b/Lecturas.html
@@ -40,7 +40,7 @@
             <li role="presentation"><a href="index.html">Inicio</a></li>
                <li role="presentation" class="Lecturas"><a href="Lecturas.html">Lecturas</a>
                 <ul class="submenu">
-                 <li><a href="Lecturas2.html"><b></b>PORQUÉ Y PARA QUÉ</a></li> 
+                 <li><a href="Lecturas2.html">PORQUÉ Y PARA QUÉ</a></li> 
                    <li><a href="Lecturas3.html">DOCUMENTACIÓN DE PRUEBA DE SOFTWARE2</a></li>
                    <li><a href="Lecturas4.html">TÉCNICAS DE DESARROLLO DE SOFTWARE</a></li>
                    <li><a href="Lecturas5.html">CONCLUSIONES</a></li>
