organizacion de codigo

--- a/Actividades.html
+++ b/Actividades.html
@@ -15,8 +15,8 @@
   <link rel="stylesheet" type="text/css" href="css/normalize.css" />
   <link rel="stylesheet" type="text/css" href="css/demo.css" />
   <link rel="stylesheet" type="text/css" href="css/set1.css" />
-  <link href="css/overwrite.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/overwrite.css" >
+  <link rel="stylesheet" href="css/style.css" >
   <link rel="stylesheet" type="text/css" href="css/actividades.css">
   <link rel="stylesheet" type="text/css" href="css/lecturas.css">
 </head>
@@ -80,7 +80,6 @@
 		  	</section>
 		</div>
 	</div>
-
 	<div style="width: 20%; float: left;">
 		<div style="align-content: center !important;">
 			<section>
@@ -94,7 +93,6 @@
 		  	</section>
 	  	</div>
 	</div>
-
 
 </body>
 </html>
