se añadio imagen niveles de actividades

--- a/Lecturas.html
+++ b/Lecturas.html
@@ -78,6 +78,11 @@
       <p align="left">Para tener una idea mas clara podemos empezar por el software, ¿Qué es el software? Es una aplicación que se construye para realizar una tarea en especial, por ejemplo: una calculadora, un sistema operativo, una hoja de calcula etc.</p>
       <p align="left">Si las personas que realizan estas aplicaciones no documentan y tampoco  llevan a cabo las pruebas técnicas sería más arduo la comprensión por parte del desarrollador y por parte del usuario.</p>
       <br>
+      <div class="img">
+          <img aling="center" src="img/nivelespruebas.jpg" height="300px">
+        </div>
+        <div>
+          <p>it_Mentor. (s.f.).</p>
       <br>
 
     </section>
